[package]
name = "to-day"
version = "0.3.2"
edition = "2024"

[[bin]]
name = "to-day"
path = "src/main.rs"

[dependencies]
gio = "0.21"
gtk4 = { version = "0.10", features = ["v4_8", "v4_12"] }
gtk4-layer-shell = "0.7"
jiff = "0.2"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
directories = "5.0"
